[gd_scene load_steps=5 format=3 uid="uid://dskqqlloghbas"]

[ext_resource type="PackedScene" uid="uid://bnn0vxiod4mwd" path="res://systems/inventory/InventorySlot.tscn" id="1_5entl"]
[ext_resource type="Script" uid="uid://cskpkyl2n71sq" path="res://systems/inventory/InventoryUI.gd" id="1_31fix"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mxytl"]
bg_color = Color(0, 0, 0, 0)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.310617, 0.310617, 0.310617, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_31fix"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(1, 1, 1, 1)

[node name="InventoryUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_31fix")
inventory_slot_scene = ExtResource("1_5entl")

[node name="Background" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_mxytl")

[node name="MainContainer" type="VBoxContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -230.0
offset_top = -224.0
offset_right = 256.0
offset_bottom = 224.0
grow_horizontal = 2
grow_vertical = 2

[node name="InventoryGrid" type="GridContainer" parent="MainContainer"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
theme_override_constants/h_separation = 4
theme_override_constants/v_separation = 4
columns = 8

[node name="ControlHintLabel" type="Label" parent="MainContainer"]
layout_mode = 2
text = "Left Click: Move item             |             Right Click: Drop item
Ctrl + Left Click: Split 1          |      Ctrl + Right Click: Drop all
"
horizontal_alignment = 1

[node name="HotbarWrapper" type="Control" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -256.0
offset_top = -64.0
offset_right = 256.0
grow_horizontal = 2
grow_vertical = 0

[node name="Hotbar" type="HBoxContainer" parent="HotbarWrapper"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0

[node name="HotbarSelector" type="Panel" parent="."]
custom_minimum_size = Vector2(64, 64)
layout_mode = 1
offset_left = 320.0
offset_top = 584.0
offset_right = 384.0
offset_bottom = 648.0
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_31fix")
